A small stylesheet update to fix poorly aligned text

--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ header {
     padding: 10px;
 }
 
-#body {
+#content {
     padding: 10px;
     padding-bottom: 40px;
 }
